# email-list-manager

./: .gitignore  Invalid_emails.csv  README.md  check_csv_structure.py  check_duplicates.py  check_gdrive_cross_duplicates.py  check_gdrive_list.py  clean_csv_commas.py  clean_special_characters.py  debug_upload.py  fix_csv_properly.py  good_emails.csv  master_filtered.csv  omit.csv  pyproject.toml  refactored_good_emails.csv  refactored_good_emails_clean.csv  refactored_good_emails_clean_chars.csv  refactored_good_emails_fixed.csv  remove_duplicates_gdrive.py  risky_unknown.csv  sample.csv  test_small_upload.py  test_upload.py  upload_checkpoint_11.json  upload_log.txt
email_list_manager/: __init__.py  consolidate_emails.py  create_master_list.py  create_omit_list.py  export_bad_contacts.py  filter_master_list.py  refactor_good_emails.py  upload_to_sendy.py
emails_from_google_drive/: 2018_speaking_tour_contacts.csv  2064876-6478ace66c7eaba50e79d802-jx7sWo - 2064876-6478ace66c7eaba50e79d802-jx7sWo.csv  Defund Racism Contact  - Everyone.csv  Download.CSV - Download.CSV.csv  EMAIL_COLLECTION_SUMMARY.txt  Fundraising Report via SalesForce.xlsx - main.csv  HcmComm-Customers-Export--2024-10-27-06-55-16 - HcmComm-Customers-Export--2024-10-27-06-55-16.csv  US Campaign supporters - Sheet1.csv  Untitled spreadsheet - Sheet1.csv  bot_subscribers_to_delete.csv  good_shepherd_collective_contacts.csv  new report - new report.csv  new_website_subscribers_backup.csv  wpforms-2013-Petition-ID-2013-2023-12-11-18-09-47 - wpforms-2013-Petition-ID-2013-2023-12-11-18-09-47.csv
(+6 files in other folders)
